--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     </head>
     <body>
       <main>
-          <div class="container"></div>
-          <script src="scripts.js" defer></script>
+          <div class="outer-container">
+            <button id="clear-button" type="submit" value="clear">Clear</button>
+            <div class="container"></div>
+           <script src="scripts.js" defer></script>
       </main>
     </body>
 </html>
