--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <body>
       <main>
           <div class="outer-container">
-            <button id="clear-button" type="submit" value="clear">Clear</button>
-            <div class="container"></div>
-           <script src="scripts.js" defer></script>
+            <div class = "meta-items">
+              <h1>Etch-a-Sketch!</h1>
+              <button id="clear-button" type="submit" value="clear">Clear</button>
+            </div>
+              <div class="grid-container">
+              <div class="container"></div>
+              <script src="scripts.js" defer></script>
+            </div>  
       </main>
     </body>
 </html>
